force-app/main/default/objects/Listing__c/fields/Geographic_Region__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Region__c</fullName>
    <description
  >Geographic Regions that a consulting partner company works in.</description>
    <label>Geographic Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>WE</fullName>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>AO</fullName>
            </value>
            <value>
                <fullName>GL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>