force-app/main/default/objects/Listing__c/fields/GetItNowPackageVersionID__c.field-meta.xml
<CustomField>
    <fullName>GetItNowPackageVersionID__c</fullName>
    <description
  >The record ID for the package version that can be installed by clicking the Get It Now button on the listing.</description>
    <inlineHelpText
  >The record ID for the package version that can be installed by clicking the Get It Now button on the listing.</inlineHelpText>
    <label>GetItNowPackageVersionID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>