force-app/main/default/objects/Listing__c/fields/GitHub_Repository_URL__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Repository_URL__c</fullName>
    <description
  >GitHub/Repository URL for Component type of Listing</description>
    <label>GitHub/Repository URL</label>
    <type>Url</type>
</CustomField>