force-app/main/default/objects/Listing__c/fields/HighResLogoAttachmentID__c.field-meta.xml
<CustomField>
    <fullName>HighResLogoAttachmentID__c</fullName>
    <description
  >The listing&apos;s high resolution logo. This is the ID for the Attachment object (attached to this publisher) where the logo is stored.</description>
    <inlineHelpText
  >The listing&apos;s resolution logo. This is the ID for the Attachment object (attached to this publisher) where the logo is stored.</inlineHelpText>
    <label>HighResLogoAttachmentID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>