force-app/main/default/objects/Listing__c/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <description
  >The range of hourly rates the employer wants to pay for the job.</description>
    <inlineHelpText
  >The range of hourly rates the employer wants to pay for the job.</inlineHelpText>
    <label>Hourly Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12.5</fullName>
            </value>
            <value>
                <fullName>37.5</fullName>
            </value>
            <value>
                <fullName>62.5</fullName>
            </value>
            <value>
                <fullName>87.5</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>