force-app/main/default/objects/Listing__c/fields/HourlyRateAvg__c.field-meta.xml
<CustomField>
    <fullName>HourlyRateAvg__c</fullName>
    <description>Average value for hourly rate.</description>
    <formula>VALUE(TEXT(Hourly_Rate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>