force-app/main/default/objects/Listing__c/fields/HourlyRateMax__c.field-meta.xml
<CustomField>
    <fullName>HourlyRateMax__c</fullName>
    <description>Maximum value for hourly rate.</description>
    <formula>CASE(HourlyRateAvg__c,
12.5,25,
37.5,50,
62.5,75,
87.5,100,
100,1000,
1001)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HourlyRateMax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>