force-app/main/default/objects/Listing__c/fields/HourlyRateMin__c.field-meta.xml
<CustomField>
    <fullName>HourlyRateMin__c</fullName>
    <description>Minimum value for hourly rate.</description>
    <formula>CASE(HourlyRateAvg__c,
12.5,0,
37.5,25,
62.5,50,
87.5,75,
100,100,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HourlyRateMin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>