force-app/main/default/objects/Listing__c/fields/HoursPerWeek__c.field-meta.xml
<CustomField>
    <fullName>HoursPerWeek__c</fullName>
    <description
  >The range of number of hours per week the employer expects the developer to work on the job.</description>
    <inlineHelpText
  >The range of number of hours per week the employer expects the developer to work on the job.</inlineHelpText>
    <label>Hours/Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2.5</fullName>
            </value>
            <value>
                <fullName>7.5</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>