force-app/main/default/objects/Listing__c/fields/InstallCampaignID__c.field-meta.xml
<CustomField>
    <fullName>InstallCampaignID__c</fullName>
    <label>InstallCampaignID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>