force-app/main/default/objects/Listing__c/fields/InstallCount__c.field-meta.xml
<CustomField>
    <fullName>InstallCount__c</fullName>
    <description
  >The number of times people have clicked Get It Now or Learn More on this Listing.</description>
    <inlineHelpText
  >The number of times people have clicked Get It Now or Learn More on this Listing.</inlineHelpText>
    <label>InstallCount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>