force-app/main/default/objects/Listing__c/fields/isDatoramaApp__c.field-meta.xml
<CustomField>
    <fullName>isDatoramaApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDatoramaApp</label>
    <type>Checkbox</type>
</CustomField>