force-app/main/default/objects/Listing__c/fields/IsFeaturedInSetup__c.field-meta.xml
<CustomField>
    <fullName>IsFeaturedInSetup__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Determines whether a particular App Listing is featured in the Setup Module.</description>
    <inlineHelpText
  >Check this box if this App Listing is to be shown in the Setup Featured Apps Module.</inlineHelpText>
    <label>IsFeaturedInSetup</label>
    <type>Checkbox</type>
</CustomField>