force-app/main/default/objects/Listing__c/fields/isFedrampCertified__c.field-meta.xml
<CustomField>
    <fullName>isFedrampCertified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFedrampCertified</label>
    <type>Checkbox</type>
</CustomField>