force-app/main/default/objects/Listing__c/fields/isFinancialServicesCloud__c.field-meta.xml
<CustomField>
    <fullName>isFinancialServicesCloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFinancialServicesCloud</label>
    <type>Checkbox</type>
</CustomField>