force-app/main/default/objects/Listing__c/fields/isGovernmentCloud__c.field-meta.xml
<CustomField>
    <fullName>isGovernmentCloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGovernmentCloud</label>
    <type>Checkbox</type>
</CustomField>