force-app/main/default/objects/Listing__c/fields/isHealthCloud__c.field-meta.xml
<CustomField>
    <fullName>isHealthCloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHealthCloud</label>
    <type>Checkbox</type>
</CustomField>