force-app/main/default/objects/Listing__c/fields/isLightningAccredited__c.field-meta.xml
<CustomField>
    <fullName>isLightningAccredited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>isLightningAccredited</description>
    <label>Is Lightning Accredited</label>
    <type>Checkbox</type>
</CustomField>