force-app/main/default/objects/Listing__c/fields/isLightningComponent__c.field-meta.xml
<CustomField>
    <fullName>isLightningComponent__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if an app listing is Lightning Component.</description>
    <label>isLightningComponent</label>
    <type>Checkbox</type>
</CustomField>