force-app/main/default/objects/Listing__c/fields/isLightningReady__c.field-meta.xml
<CustomField>
    <fullName>isLightningReady__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This is to indicate apps that work properly in the new Lighting Experience.</description>
    <label>Is Lightning Ready</label>
    <type>Checkbox</type>
</CustomField>