force-app/main/default/objects/Listing__c/fields/isMarketingCloud__c.field-meta.xml
<CustomField>
    <fullName>isMarketingCloud__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checkbox field on Listing for &quot;Marketing Cloud App&quot;. This will be set manually in Tz by an operations team.</description>
    <label>isMarketingCloud</label>
    <type>Checkbox</type>
</CustomField>