force-app/main/default/objects/Listing__c/fields/isMulti_currency__c.field-meta.xml
<CustomField>
    <fullName>isMulti_currency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMulti-currency</label>
    <type>Checkbox</type>
</CustomField>