force-app/main/default/objects/Listing__c/fields/isPersonAccounts__c.field-meta.xml
<CustomField>
    <fullName>isPersonAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPersonAccounts</label>
    <type>Checkbox</type>
</CustomField>