force-app/main/default/objects/Listing__c/fields/isPledge1Percent__c.field-meta.xml
<CustomField>
    <fullName>isPledge1Percent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPledge1Percent</label>
    <type>Checkbox</type>
</CustomField>