force-app/main/default/objects/Listing__c/fields/isQuipApp__c.field-meta.xml
<CustomField>
    <fullName>isQuipApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isQuipApp</label>
    <type>Checkbox</type>
</CustomField>