force-app/main/default/objects/Listing__c/fields/isSalesforce1Mobile__c.field-meta.xml
<CustomField>
    <fullName>isSalesforce1Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if an app listing is Salesforce1 Mobile.</description>
    <label>isSalesforce1Mobile</label>
    <type>Checkbox</type>
</CustomField>