force-app/main/default/objects/Listing__c/fields/isSalesforceShield__c.field-meta.xml
<CustomField>
    <fullName>isSalesforceShield__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSalesforceShield</label>
    <type>Checkbox</type>
</CustomField>