force-app/main/default/objects/Listing__c/fields/JobType__c.field-meta.xml
<CustomField>
    <fullName>JobType__c</fullName>
    <description>The budget type of the job.</description>
    <inlineHelpText>The budget type of the job.</inlineHelpText>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>