force-app/main/default/objects/Listing__c/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <description
  >Describes the set of languages that this App supports.</description>
    <inlineHelpText
  >Describes the set of languages that this App supports.</inlineHelpText>
    <label>Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>nl</fullName>
            </value>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>fi</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>da</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>ja</fullName>
            </value>
            <value>
                <fullName>ko</fullName>
            </value>
            <value>
                <fullName>pt</fullName>
            </value>
            <value>
                <fullName>ru</fullName>
            </value>
            <value>
                <fullName>zh_CN</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>sv</fullName>
            </value>
            <value>
                <fullName>th</fullName>
            </value>
            <value>
                <fullName>zh_TW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>