force-app/main/default/objects/Listing__c/fields/Last_User_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_User_Install_Date__c</fullName>
    <description
  >Date of last user installation of this application</description>
    <inlineHelpText
  >Date of last user installation of this application</inlineHelpText>
    <label>Last User Install Date</label>
    <type>DateTime</type>
</CustomField>