force-app/main/default/objects/Listing__c/fields/LastPackageUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastPackageUpdate__c</fullName>
    <description
  >GetItNowPackageVersionID field last updated date and time.</description>
    <inlineHelpText
  >GetItNowPackageVersionID field last updated date and time.</inlineHelpText>
    <label>LastPackageUpdate</label>
    <type>DateTime</type>
</CustomField>