force-app/main/default/objects/Listing__c/fields/LastReviewDate__c.field-meta.xml
<CustomField>
    <fullName>LastReviewDate__c</fullName>
    <description>This field is OBSOLETE</description>
    <inlineHelpText>This field is OBSOLETE</inlineHelpText>
    <label>OBSOLETE LastReviewDate</label>
    <type>DateTime</type>
</CustomField>