force-app/main/default/objects/Listing__c/fields/LastStatusChangeDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastStatusChangeDateTime__c</fullName>
    <description>The date when the status of the job last changed.</description>
    <inlineHelpText
  >The date when the status of the job last changed.</inlineHelpText>
    <label>Last Status Change Date</label>
    <type>DateTime</type>
</CustomField>