force-app/main/default/objects/Listing__c/fields/LeadsOrgID__c.field-meta.xml
<CustomField>
    <fullName>LeadsOrgID__c</fullName>
    <description
  >The ID for the Org where you should receive leads from customers who expressed interest in your AppListing.</description>
    <inlineHelpText
  >If you would like to receive leads from customers who have expressed interest in your app, provide the ID of the Org where you would like to receive these leads. You should use only your standard Salesforce Org or your ISV Edition Org for this purpose.</inlineHelpText>
    <label>Send Leads To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>