force-app/main/default/objects/Listing__c/fields/LearnMoreCampaignID__c.field-meta.xml
<CustomField>
    <fullName>LearnMoreCampaignID__c</fullName>
    <label>LearnMoreCampaignID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>