force-app/main/default/objects/Listing__c/fields/LearnMoreURL__c.field-meta.xml
<CustomField>
    <fullName>LearnMoreURL__c</fullName>
    <description
  >The URL where the customer can contact the publisher to learn more about installing/buying the app.</description>
    <inlineHelpText
  >Specify the URL where the customer can contact the publisher to learn more about installing/buying the app.</inlineHelpText>
    <label>Learn More URL</label>
    <type>Url</type>
</CustomField>