force-app/main/default/objects/Listing__c/fields/LegacyID__c.field-meta.xml
<CustomField>
    <fullName>LegacyID__c</fullName>
    <description
  >The ID of the legacy object from which this object was migrated.</description>
    <externalId>true</externalId>
    <inlineHelpText
  >The ID of the legacy object from which this object was migrated.</inlineHelpText>
    <label>LegacyID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>