force-app/main/default/objects/Listing__c/fields/LicenseAgreement__c.field-meta.xml
<CustomField>
    <fullName>LicenseAgreement__c</fullName>
    <description>The license agreement for the app.</description>
    <inlineHelpText
  >You can optionally provide your license agreement to use your app. Customers must agree to these terms in order to install your app. If you do not provide an agreement, a standard salesforce.com agreement will be provided for you.</inlineHelpText>
    <label>Terms &amp; Conditions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>