force-app/main/default/objects/Listing__c/fields/ListingId__c.field-meta.xml
<CustomField>
    <fullName>ListingId__c</fullName>
    <description>18 char listing id</description>
    <label>Listing Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>