force-app/main/default/objects/Listing__c/fields/ListingNumber__c.field-meta.xml
<CustomField>
    <fullName>ListingNumber__c</fullName>
    <description
  >A unique identifier for the listing. Used to aid data migration.</description>
    <displayFormat>L-{0}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText
  >A unique identifier for the listing. Used to aid data migration.</inlineHelpText>
    <label>ListingNumber</label>
    <type>AutoNumber</type>
</CustomField>