force-app/main/default/objects/Listing__c/fields/ListingURL__c.field-meta.xml
<CustomField>
    <fullName>ListingURL__c</fullName>
    <description>URL for listing detail</description>
    <formula>IF( $RecordType.Name  ==  &apos;Job&apos; ,
            &apos;https://appexchange.salesforce.com/job?jobId=&apos; + Id,
            &apos;https://appexchange.salesforce.com/listingDetail?listingId=&apos; + Id)</formula>
    <label>Listing URL</label>
    <type>Text</type>
</CustomField>