force-app/main/default/objects/Listing__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description
  >Indicates if the job can be filled by someone located anywhere or only by people in a specific location.</description>
    <inlineHelpText
  >Indicates if the job can be filled by someone located anywhere or only by people in a specific location.</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Any Location</fullName>
            </value>
            <value>
                <fullName>Specific Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>