force-app/main/default/objects/Listing__c/fields/LogoAttachmentID__c.field-meta.xml
<CustomField>
    <fullName>LogoAttachmentID__c</fullName>
    <description
  >The listing&apos;s logo. This is the ID for the Attachment object (attached to this publisher) where the logo is stored.</description>
    <inlineHelpText
  >The listing&apos;s logo. This is the ID for the Attachment object (attached to this publisher) where the logo is stored.</inlineHelpText>
    <label>LogoAttachmentID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>