force-app/main/default/objects/Listing__c/fields/LogoSet__c.field-meta.xml
<CustomField>
    <fullName>LogoSet__c</fullName>
    <description
  >Holds JSON related to the LogoSet used by OAF, this is used on Coveo.</description>
    <label>LogoSet</label>
    <length>120000</length>
    <type>LongTextArea</type>
</CustomField>