force-app/main/default/objects/Listing__c/fields/LongDescription__c.field-meta.xml
<CustomField>
    <fullName>LongDescription__c</fullName>
    <description
  >The long description of the AppListing show on the App Detail page.</description>
    <inlineHelpText
  >The long description of the AppListing show on the App Detail page.</inlineHelpText>
    <label>Full Description</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>