force-app/main/default/objects/Listing__c/fields/LTAPercentComplete__c.field-meta.xml
<CustomField>
    <fullName>LTAPercentComplete__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >The percentage points based on the amount of text area fields completed</description>
    <label>LTAPercentComplete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>