force-app/main/default/objects/Listing__c/fields/OrderInSetup__c.field-meta.xml
<CustomField>
    <fullName>OrderInSetup__c</fullName>
    <description
  >The place this App has in the Featured Apps Carousel in Org&apos;s Setup.
i.e : 1 for first, 2 for second, etc.</description>
    <inlineHelpText
  >The place this App has in the Featured Apps Carousel in Org&apos;s Setup.
i.e : 1 for first, 2 for second, etc.</inlineHelpText>
    <label>OrderInSetup</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>