force-app/main/default/objects/Listing__c/fields/Org62ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>Org62ApplicationId__c</fullName>
    <description>Application Record ID on ORG62</description>
    <externalId>true</externalId>
    <label>Org62ApplicationId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>