force-app/main/default/objects/Listing__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <description
  >This formula field checks if a listing is free formula: PriceFree__c = false AND Freemium__c = false AND RequiresPaidService__c = false used for filters</description>
    <formula
  >PriceFree__c = false &amp;&amp; Freemium__c = false &amp;&amp; RequiresPaidService__c = false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >This formula field checks if a listing is free formula: PriceFree__c = false AND Freemium__c = false AND RequiresPaidService__c = false used for filters</inlineHelpText>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>