force-app/main/default/objects/Listing__c/fields/PaidText__c.field-meta.xml
<CustomField>
    <fullName>PaidText__c</fullName>
    <description
  >This formula field returns ‘Free’ if Paid__c = false, ‘Paid’ if Paid__c = false or blank if the recordType name is Service or Content, used on my favorites page.</description>
    <formula
  >IF(RecordType.Name = &apos;Service&apos; || RecordType.Name = &apos;Content&apos;, &apos;&apos;, IF(Paid__c, &apos;Paid&apos;, &apos;Free&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >This formula field returns ‘Free’ if Paid__c = false, ‘Paid’ if Paid__c = false or blank if the recordType name is Service or Content, used on my favorites page.</inlineHelpText>
    <label>PaidText</label>
    <type>Text</type>
</CustomField>