force-app/main/default/objects/Listing__c/fields/Partner_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Last_Modified_Date__c</fullName>
    <label>Partner Last Modified Date</label>
    <type>DateTime</type>
</CustomField>