force-app/main/default/objects/Listing__c/fields/PriceDetails__c.field-meta.xml
<CustomField>
    <fullName>PriceDetails__c</fullName>
    <description>The detailed pricing information for this App.</description>
    <inlineHelpText
  >The detailed pricing information for this App.</inlineHelpText>
    <label>Price Details</label>
    <type>TextArea</type>
</CustomField>