force-app/main/default/objects/Listing__c/fields/PriceFree__c.field-meta.xml
<CustomField>
    <fullName>PriceFree__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if the App on this Listing is free for everyone.</description>
    <inlineHelpText
  >Indicates if the App on this Listing is free for everyone.</inlineHelpText>
    <label>Pricing</label>
    <type>Checkbox</type>
</CustomField>