force-app/main/default/objects/Listing__c/fields/PriceNonProfitDiscount__c.field-meta.xml
<CustomField>
    <fullName>PriceNonProfitDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether the app is available to nonprofits for a discount or free.</description>
    <inlineHelpText
  >Indicates whether the app is available to nonprofits for a discount or free.</inlineHelpText>
    <label>Discounted for Non-Profits and NGOs</label>
    <type>Checkbox</type>
</CustomField>