force-app/main/default/objects/Listing__c/fields/PricingRestrictions__c.field-meta.xml
<CustomField>
    <fullName>PricingRestrictions__c</fullName>
    <description
  >Allow customers to see freemium pricing restrictions or external subscription details.</description>
    <inlineHelpText
  >Allow customers to see freemium pricing restrictions or external subscription details.</inlineHelpText>
    <label>PricingRestrictions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>