force-app/main/default/objects/Listing__c/fields/programmingLanguages__c.field-meta.xml
<CustomField>
    <fullName>programmingLanguages__c</fullName>
    <label>Programming Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AandV</fullName>
            </value>
            <value>
                <fullName>Csharp</fullName>
            </value>
            <value>
                <fullName>HTMLCSSJavaScript</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>NodeJs</fullName>
            </value>
            <value>
                <fullName>ObjectiveC</fullName>
            </value>
            <value>
                <fullName>Perl</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
            <value>
                <fullName>SQLPostgres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>