force-app/main/default/objects/Listing__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether this Listing is publicly viewable on the Marketplace.</description>
    <inlineHelpText
  >Indicates whether this Listing is publicly viewable on the Marketplace.</inlineHelpText>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>