force-app/main/default/objects/Listing__c/fields/PublishedDate__c.field-meta.xml
<CustomField>
    <fullName>PublishedDate__c</fullName>
    <description
  >The date when this Listing was publicly published on the Marketplace.</description>
    <inlineHelpText
  >The date when this Listing was publicly published on the Marketplace.</inlineHelpText>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>