force-app/main/default/objects/Listing__c/fields/PublishLocation__c.field-meta.xml
<CustomField>
    <fullName>PublishLocation__c</fullName>
    <description>Partner finder feed.</description>
    <inlineHelpText>Partner finder feed.</inlineHelpText>
    <label>Publish To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AppExchange</fullName>
                <default>true</default>
                <label>AppExchange</label>
            </value>
            <value>
                <fullName>French Partner Finder</fullName>
            </value>
            <value>
                <fullName>German Partner Finder</fullName>
            </value>
            <value>
                <fullName>Italian Partner Finder</fullName>
            </value>
            <value>
                <fullName>Japanese Partner Finder</fullName>
            </value>
            <value>
                <fullName>Korean Partner Finder</fullName>
            </value>
            <value>
                <fullName>Portuguese Partner Finder</fullName>
            </value>
            <value>
                <fullName>Dutch Partner Finder</fullName>
            </value>
            <value>
                <fullName>Spanish Partner Finder</fullName>
            </value>
            <value>
                <fullName>Swedish Partner Finder</fullName>
            </value>
            <value>
                <fullName>Chinese Partner Finder</fullName>
            </value>
            <value>
                <fullName>Traditional Chinese Partner Finder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>