force-app/main/default/objects/Listing__c/fields/QualifiedChatToken__c.field-meta.xml
<CustomField>
    <fullName>QualifiedChatToken__c</fullName>
    <description
  >Add a chat token to connect this listing with an AppExchange Chat implementation built with the Qualified platform.</description>
    <inlineHelpText
  >Add a chat token to connect this listing with an AppExchange Chat implementation built with the Qualified platform.</inlineHelpText>
    <label>Qualified Chat Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>