force-app/main/default/objects/Listing__c/fields/RedirectURL__c.field-meta.xml
<CustomField>
    <fullName>RedirectURL__c</fullName>
    <description
  >URL for where the content listing tile will take the user to. This is applicable only for Content type of Internal Article</description>
    <inlineHelpText
  >URL for where the content listing tile will take the user to. This is applicable only for Content type of Internal Article</inlineHelpText>
    <label>Redirect URL</label>
    <type>Url</type>
</CustomField>