force-app/main/default/objects/Listing__c/fields/RequiredSkills__c.field-meta.xml
<CustomField>
    <fullName>RequiredSkills__c</fullName>
    <label>Required Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AandV</fullName>
            </value>
            <value>
                <fullName>Csharp</fullName>
            </value>
            <value>
                <fullName>UiScript</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>ObjectiveC</fullName>
            </value>
            <value>
                <fullName>Perl</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
            <value>
                <fullName>OtherLanguages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>