force-app/main/default/objects/Listing__c/fields/RequiresPaidService__c.field-meta.xml
<CustomField>
    <fullName>RequiresPaidService__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This app is free but requires a paid subscription to an external service.</description>
    <inlineHelpText
  >This app is free but requires a paid subscription to an external service.</inlineHelpText>
    <label>RequiresPaidService</label>
    <type>Checkbox</type>
</CustomField>