force-app/main/default/objects/Listing__c/fields/ReviewDate__c.field-meta.xml
<CustomField>
    <fullName>ReviewDate__c</fullName>
    <description>Last modified review date.</description>
    <inlineHelpText>Last modified review date.</inlineHelpText>
    <label>ReviewDate</label>
    <type>DateTime</type>
</CustomField>