force-app/main/default/objects/Listing__c/fields/ReviewsEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ReviewsEmailAddress__c</fullName>
    <description
  >The email address to use for review emails for this listing.</description>
    <inlineHelpText
  >The email address to use for review emails for this listing.</inlineHelpText>
    <label>Reviews Email Address</label>
    <type>Email</type>
</CustomField>