force-app/main/default/objects/Listing__c/fields/RunsOn__c.field-meta.xml
<CustomField>
    <fullName>RunsOn__c</fullName>
    <label>RunsOn</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>Heroku</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>