force-app/main/default/objects/Listing__c/fields/SalesEmail__c.field-meta.xml
<CustomField>
    <fullName>SalesEmail__c</fullName>
    <description
  >The email address for contacting the Publisher sales team.</description>
    <inlineHelpText
  >The email address for contacting the Publisher sales team.</inlineHelpText>
    <label>SalesEmail</label>
    <type>Email</type>
</CustomField>