force-app/main/default/objects/Listing__c/fields/SalesPhone__c.field-meta.xml
<CustomField>
    <fullName>SalesPhone__c</fullName>
    <description
  >The phone number for contacting the Publisher sales team.</description>
    <inlineHelpText
  >The phone number for contacting the Publisher sales team.</inlineHelpText>
    <label>SalesPhone</label>
    <type>Phone</type>
</CustomField>